chore: clean up config flow (remove dev_mode, namespace Modbus keys) (#216)
* chore: remove unused dev_mode option from config flow

The developer mode option was never consumed by any logic in the
integration. Remove it from the advanced settings schema, the
fallback config dict, the CONF_DEV_MODE constant, and all
translation files.

* refactor: move slave_id to gateway step and rename to device_id

Move the Modbus device ID field from the advanced settings step to
the gateway configuration step where host and port are configured.
Rename the config key from "slave" to "device_id" for clarity.

- Add device_id field to GATEWAY_SCHEMA and options connection step
- Remove slave field from ADVANCED_SCHEMA
- Rename CONF_SLAVE/DEFAULT_SLAVE to CONF_DEVICE_ID/DEFAULT_DEVICE_ID
- Add config entry migration (v2.1 → v2.2) to rename stored key
- Use user-provided device_id for initial connection test
- Update all translations (en, fr, nl, ro)

* refactor: prefix Modbus connection keys with modbus_

Namespace the Modbus connection config keys (host, port, device_id)
under the modbus_ prefix to prepare for future non-Modbus gateway
types.

- CONF_HOST → CONF_MODBUS_HOST ("modbus_host")
- CONF_PORT → CONF_MODBUS_PORT ("modbus_port")
- CONF_DEVICE_ID → CONF_MODBUS_DEVICE_ID ("modbus_device_id")
- Stop importing CONF_HOST/CONF_PORT from homeassistant.const
- Update config entry migration to rename all three keys
- Update all translations (en, fr, nl, ro)

* docs: update CHANGELOG with config flow cleanup changes

--- a/custom_components/hitachi_yutaki/translations/fr.json
+++ b/custom_components/hitachi_yutaki/translations/fr.json
@@ -63,8 +63,9 @@
         "title": "Paramètres de connexion",
         "description": "Entrez les détails de connexion pour votre passerelle.",
         "data": {
-          "host": "Hôte/Adresse IP",
-          "port": "Port"
+          "modbus_host": "Hôte/Adresse IP",
+          "modbus_port": "Port",
+          "modbus_device_id": "ID Périphérique Modbus"
         }
       },
       "profile": {
@@ -110,8 +111,9 @@
         "description": "Entrez les détails de connexion pour votre passerelle de pompe à chaleur Hitachi Yutaki.",
         "data": {
           "name": "Nom",
-          "host": "Hôte/Adresse IP",
-          "port": "Port",
+          "modbus_host": "Hôte/Adresse IP",
+          "modbus_port": "Port",
+          "modbus_device_id": "ID Périphérique Modbus",
           "unit_id": "ID de l'unité (HC-A(16/64)MB uniquement, 0-15)",
           "show_advanced": "Afficher les options avancées"
         }
@@ -139,9 +141,7 @@
         "title": "Paramètres avancés",
         "description": "Configurez les paramètres avancés de Modbus et de l'intégration.",
         "data": {
-          "slave": "ID Esclave Modbus",
-          "scan_interval": "Intervalle d'interrogation (secondes)",
-          "dev_mode": "Mode développeur (active toutes les entités)"
+          "scan_interval": "Intervalle d'interrogation (secondes)"
         }
       }
     },
