--- a/custom_components/hitachi_yutaki/translations/ro.json
+++ b/custom_components/hitachi_yutaki/translations/ro.json
@@ -63,8 +63,9 @@
         "title": "Setări de conexiune",
         "description": "Introduceți detaliile de conexiune pentru gateway-ul dumneavoastră.",
         "data": {
-          "host": "Gazdă/Adresă IP",
-          "port": "Port"
+          "modbus_host": "Gazdă/Adresă IP",
+          "modbus_port": "Port",
+          "modbus_device_id": "ID Dispozitiv Modbus"
         }
       },
       "profile": {
@@ -110,8 +111,9 @@
         "description": "Introduceți detaliile de conexiune pentru gateway-ul pompei de căldură Hitachi Yutaki.",
         "data": {
           "name": "Nume",
-          "host": "Gazdă/Adresă IP",
-          "port": "Port",
+          "modbus_host": "Gazdă/Adresă IP",
+          "modbus_port": "Port",
+          "modbus_device_id": "ID Dispozitiv Modbus",
           "unit_id": "ID unitate (doar HC-A(16/64)MB, 0-15)",
           "show_advanced": "Afișare opțiuni avansate"
         }
@@ -139,9 +141,7 @@
         "title": "Setări avansate",
         "description": "Configurați setările avansate Modbus și ale integrării.",
         "data": {
-          "slave": "ID Slave Modbus",
-          "scan_interval": "Interval de interogare (secunde)",
-          "dev_mode": "Mod dezvoltator (activează toate entitățile)"
+          "scan_interval": "Interval de interogare (secunde)"
         }
       }
     },
