--- a/custom_components/hitachi_yutaki/translations/en.json
+++ b/custom_components/hitachi_yutaki/translations/en.json
@@ -63,8 +63,9 @@
         "title": "Connection Settings",
         "description": "Enter the connection details for your Hitachi Yutaki heat pump gateway.",
         "data": {
-          "host": "Host/IP Address",
-          "port": "Port"
+          "modbus_host": "Host/IP Address",
+          "modbus_port": "Port",
+          "modbus_device_id": "Modbus Device ID"
         }
       },
       "profile": {
@@ -110,8 +111,9 @@
         "description": "Enter the connection details for your Hitachi Yutaki heat pump gateway.",
         "data": {
           "name": "Name",
-          "host": "Host/IP Address",
-          "port": "Port",
+          "modbus_host": "Host/IP Address",
+          "modbus_port": "Port",
+          "modbus_device_id": "Modbus Device ID",
           "unit_id": "Unit ID (HC-A(16/64)MB only, 0-15)",
           "show_advanced": "Show advanced options"
         }
@@ -139,9 +141,7 @@
         "title": "Advanced Settings",
         "description": "Configure advanced Modbus and integration settings.",
         "data": {
-          "slave": "Modbus Slave ID",
-          "scan_interval": "Polling Interval (seconds)",
-          "dev_mode": "Development Mode (enables all entities)"
+          "scan_interval": "Polling Interval (seconds)"
         }
       }
     },
